[tool.poetry]
name = "poetry-extras"
version = "0.1.0"
description = "Poetry extras feature probe for Mend SCA detection testing"
authors = ["mend-detection-qa <detection-qa@mend.io>"]
readme = "README.md"
packages = [{include = "poetry_extras"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32"
fastapi = {version = "^0.136", optional = true}
uvicorn = {version = "^0.45", optional = true}
scikit-learn = {version = "^1.8", optional = true}
pandas = {version = "^3.0", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]
ml = ["scikit-learn", "pandas"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
